Added some functionalities

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,8 +16,7 @@
     />
     <title>Sammy Samkough</title>
   </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+  <body id="body" class="deep-orange lighten-4">
     <div id="root"></div>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
