Added more content

--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,13 @@
     </head>
     <body>
         <p>Sammy Samkough</p>
+        <p>[description]</p>
+        <ul>
+            <li>about me</li>
+            <li>projects</li>
+            <li>services</li>
+            <li>gallery</li>
+            <li>notebook</li>
+        </ul>
     </body>
 </html>
