Created skeleton of site

--- a/public/pages/notebook.html
+++ b/public/pages/notebook.html
@@ -4,25 +4,24 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="author" content="Sammy Samkough">
-        <title>sammy samkough</title>
-        <link rel="stylesheet" href="css/styles.css">
-        <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
+        <title>notebook</title>
+        <link rel="stylesheet" href="../css/styles.css">
+        <link rel="shortcut icon" type="image/png" href="../assets/favicon.png"/>
     </head>
     <body>
         <div class="parent">
             <div class="child">
                 <div class="content">
-                    <h2>sammy samkough</h2>
-                    <h4>[description]</h4>
+                    <h2>notebook</h2>
                 </div>
                 <div class="footer">
                     <ul class="nav">
                         <li><a href ="../index.html">home</a> | </li>
-                        <li><a href ="pages/about.html">about</a> | </li> 
-                        <li><a href ="pages/projects.html">projects</a> | </li>
-                        <li><a href ="pages/services.html">services</a> | </li>
-                        <li><a href ="pages/notebook.html">notebook</a> | </li>
-                        <li><a href ="pages/gallery.html">gallery</a></li>
+                        <li><a href ="about.html">about</a> | </li> 
+                        <li><a href ="projects.html">projects</a> | </li>
+                        <li><a href ="services.html">services</a> | </li>
+                        <li><a href ="notebook.html">notebook</a> | </li>
+                        <li><a href ="gallery.html">gallery</a></li>
                     </ul>
                     <ul class="contact">
                         <li class="email"><a href="mailto:sammysamkough@hotmail.com">sammysamkough@hotmail.com</a></li>
@@ -30,7 +29,6 @@
                     </ul>
                 </div>
             </div>
-        </div>
         </div>
     </body>
 </html>
