--- a/public/index.html
+++ b/public/index.html
@@ -1,36 +1,14 @@
-<!doctype html>
-<html lang="en-US">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="author" content="Sammy Samkough">
-        <title>sammy samkough</title>
-        <link rel="stylesheet" href="css/styles.css">
-        <link rel="shortcut icon" type="image/png" href="assets/favicon.png"/>
-    </head>
-    <body>
-        <div class="parent">
-            <div class="child">
-                <div class="content">
-                    <h2>sammy samkough</h2>
-                    <h4>[description]</h4>
-                </div>
-                <div class="footer">
-                    <ul class="nav">
-                        <li><a href ="../index.html">home</a> | </li>
-                        <li><a href ="pages/about.html">about</a> | </li> 
-                        <li><a href ="pages/projects.html">projects</a> | </li>
-                        <li><a href ="pages/services.html">services</a> | </li>
-                        <li><a href ="pages/notebook.html">notebook</a> | </li>
-                        <li><a href ="pages/gallery.html">gallery</a></li>
-                    </ul>
-                    <ul class="contact">
-                        <li class="email"><a href="mailto:sammysamkough@hotmail.com">sammysamkough@hotmail.com</a></li>
-                        <li class="handle"><a href="https://twitter.com/ssamkough">@ssamkough</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        </div>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description" content="sammy samkough's site :)" />
+    <title>sammy samkough</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
 </html>
