--- a/peace.html
+++ b/peace.html
@@ -9,7 +9,7 @@
         <div style="width: 100vw; height: 100vh;">
             <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;">
                 <div style="max-width: 700px; padding: 20px;">
-                    <img src="fam.jpg" alt="family" style="width: 100%;" />
+                    <h1>hey</h1>
                 </div>
             </div>
         </div>
