--- a/peace.html
+++ b/peace.html
@@ -7,9 +7,32 @@
     </head>
     <body>
         <div style="width: 100vw; height: 100vh;">
-            <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;">
-                <div style="max-width: 700px; padding: 20px;">
+            <div style="width: 100%; height: 100%; display: flex; justify-content: center;">
+                <div style="max-width: 700px; padding: 6em 2em; line-height: 1.75em;">
                     <h1>hey</h1>
+                    <div style="padding: 10px;"></div>
+                    <p>ive procrastinated on this for <strong>way</strong> too long</p>
+                    <p>im not too sure why (i think i actually do, but that isn't for this post)</p>
+                    <p>the feeling that i must depart from instagram in some sort of <em>correct</em> manner - 
+                        and to let ppl i know on instagram that even if im not here, they could still reach out</p>
+                    <div style="padding: 10px;"></div>
+                    <p>but yeah that's basically it</p>
+                    <p>if you have my number, you have my number. but if you dont have it or any contact info,
+                        you could contact me at sammysamkough at hotmail dot com
+                    </p>
+                    <p>(im not spelling it out explicitly because spam (i think, idk, i just follow what other ppl do))</p>
+                    <div style="padding: 10px;"></div>
+                    <p>this is just so funny to me. i never would have thought leaving a social media platform is
+                        that big of a deal. but look at me. like, who am i lmao? but i guess deleting posts forever
+                        that meant a lot and having created some sort of digital identity on instagram
+                         is a bigger deal than i had thought
+                    </p>
+                    <p>but yeah, ill be deleting all my instagram accounts on thursday, march 24th 2022 (probs at midnight).
+                        hope y'all have a great one <3
+                    </p>
+                    <div style="padding: 10px;"></div>
+                    <h3>sammy</h3>
+                    <h4>tuesday, march 22 @ 2:06am</h4>
                 </div>
             </div>
         </div>
