--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div style="width: 100vw; height: 100vh;">
             <div style="width: 100%; height: 100%; display: flex; justify-content: center; align-items: center;">
-                <div style="max-width: 700px; padding: 20px;">
+                <div style="max-width: 700px; padding: 6em 2em;">
                     <img src="fam.jpg" alt="family" style="width: 100%;" />
                 </div>
             </div>
