--- a/peace.html
+++ b/peace.html
@@ -16,6 +16,8 @@
                     <p>the feeling that i must depart from instagram in some sort of <em>correct</em> manner - 
                         and to let ppl i know on instagram that even if im not here, they could still reach out</p>
                     <div style="padding: 10px;"></div>
+                    <p>...</p>
+                    <div style="padding: 10px;"></div>
                     <p>but yeah that's basically it</p>
                     <p>if you have my number, you have my number. but if you dont have it or any contact info,
                         you could contact me at sammysamkough at hotmail dot com
@@ -24,8 +26,7 @@
                     <div style="padding: 10px;"></div>
                     <p>this is just so funny to me. i never would have thought leaving a social media platform is
                         that big of a deal. but look at me. like, who am i lmao? but i guess deleting posts forever
-                        that meant a lot and having created some sort of digital identity on instagram
-                         is a bigger deal than i had thought
+                        that meant a lot means more than i had thought
                     </p>
                     <p>but yeah, ill be deleting all my instagram accounts on thursday, march 24th 2022 (probs at midnight).
                         hope y'all have a great one <3
@@ -38,3 +39,18 @@
         </div>
     </body>
 </html>
+
+<!--
+
+if you're seeing this, that's pretty cool. enjoy this heart i stole from the internet:
+
+     * * *   * * *
+   * *   * * *   * *
+   *       *       *
+   * *           * *
+     * *       * *
+       * *   * *
+         * * *
+           *
+
+-->
