--- a/peace.html
+++ b/peace.html
@@ -14,7 +14,7 @@
                     <p>ive procrastinated on this for <strong>way</strong> too long</p>
                     <p>im not too sure why (i think i actually do, but that isn't for this post)</p>
                     <p>the feeling that i must depart from instagram in some sort of <em>correct</em> manner - 
-                        and to let ppl i know on instagram that even if im not here, they could still reach out</p>
+                        and to let ppl i know on instagram that even if im not there, they could still reach out</p>
                     <div style="padding: 10px;"></div>
                     <p>...</p>
                     <div style="padding: 10px;"></div>
@@ -33,7 +33,7 @@
                     </p>
                     <div style="padding: 10px;"></div>
                     <h3>sammy</h3>
-                    <h4>tuesday, march 22 @ 2:06am</h4>
+                    <h4>tuesday, march 22 @ 2:19am</h4>
                 </div>
             </div>
         </div>
