--- a/peace.html
+++ b/peace.html
@@ -11,8 +11,10 @@
                 <div style="max-width: 700px; padding: 6em 2em; line-height: 1.75em;">
                     <h1>hey</h1>
                     <div style="padding: 10px;"></div>
-                    <p>ive procrastinated on this for <strong>way</strong> too long</p>
-                    <p>im not too sure why (i think i actually do, but that isn't for this post)</p>
+                    <p>i am peacin out on instagram</p>
+                    <p>ive been off instagram for months now but have yet to delete my accounts</p>
+                    <p>ive procrastinated on this for <strong>way</strong> too long, im not too sure why 
+                        (i think i actually do, but that isn't for this post)</p>
                     <p>the feeling that i must depart from instagram in some sort of <em>correct</em> manner - 
                         and to let ppl i know on instagram that even if im not there, they could still reach out</p>
                     <div style="padding: 10px;"></div>
@@ -26,7 +28,7 @@
                     <div style="padding: 10px;"></div>
                     <p>this is just so funny to me. i never would have thought leaving a social media platform is
                         that big of a deal. but look at me. like, who am i lmao? but i guess deleting posts forever
-                        that meant a lot means more than i had thought
+                        that meant a lot means more than i had thought. or maybe im just lazy. who knows!
                     </p>
                     <p>but yeah, ill be deleting all my instagram accounts on thursday, march 24th 2022 (probs at midnight).
                         hope y'all have a great one <3
