--- a/peace.html
+++ b/peace.html
@@ -8,7 +8,8 @@
     <body>
         <div style="width: 100vw; height: 100vh;">
             <div style="width: 100%; height: 100%; display: flex; justify-content: center;">
-                <div style="max-width: 700px; padding: 6em 2em; line-height: 1.75em;">
+                <div style="width: 100%; height: 100%; overflow: scroll; padding: 6em 2em 4em 2em; line-height: 1.75em;">
+                    <div style="max-width: 700px;">
                     <h1>hey</h1>
                     <div style="padding: 10px;"></div>
                     <p>i am peacin out on instagram</p>
@@ -36,6 +37,7 @@
                     <div style="padding: 10px;"></div>
                     <h3>sammy</h3>
                     <h4>tuesday, march 22 @ 2:19am</h4>
+                </div>
                 </div>
             </div>
         </div>
