added experience and projects

--- a/peace.html
+++ b/peace.html
@@ -1,47 +1,80 @@
 <html lang="en-US">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>sam</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <div style="width: 100vw; height: 100vh;">
-            <div style="width: 100%; height: 100%; display: flex; justify-content: center;">
-                <div style="width: 100%; height: 100%; overflow: scroll; padding: 6em 2em 4em 2em; line-height: 1.75em;">
-                    <div style="max-width: 700px;">
-                    <h1>hey</h1>
-                    <div style="padding: 10px;"></div>
-                    <p>i am peacin out on instagram</p>
-                    <p>ive been off instagram for months now but have yet to delete my accounts</p>
-                    <p>ive procrastinated on this for <strong>way</strong> too long, im not too sure why 
-                        (i think i actually do, but that isn't for this post)</p>
-                    <p>the feeling that i must depart from instagram in some sort of <em>correct</em> manner - 
-                        and to let ppl i know on instagram that even if im not there, they could still reach out</p>
-                    <div style="padding: 10px;"></div>
-                    <p>...</p>
-                    <div style="padding: 10px;"></div>
-                    <p>but yeah that's basically it</p>
-                    <p>if you have my number, you have my number. but if you dont have it or any contact info,
-                        you could contact me at sammysamkough at hotmail dot com
-                    </p>
-                    <p>(im not spelling it out explicitly because spam (i think, idk, i just follow what other ppl do))</p>
-                    <div style="padding: 10px;"></div>
-                    <p>this is just so funny to me. i never would have thought leaving a social media platform is
-                        that big of a deal. but look at me. like, who am i lmao? but i guess deleting posts forever
-                        that meant a lot means more than i had thought. or maybe im just lazy. who knows!
-                    </p>
-                    <p>but yeah, ill be deleting all my instagram accounts on thursday, march 24th 2022 (probs at midnight).
-                        hope y'all have a great one <3
-                    </p>
-                    <div style="padding: 10px;"></div>
-                    <h3>sammy</h3>
-                    <h4>tuesday, march 22 @ 2:34am</h4>
-                </div>
-                </div>
-            </div>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>sam | peace</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div style="width: 100vw; height: 100vh">
+      <div
+        style="
+          width: 100%;
+          height: 100%;
+          display: flex;
+          justify-content: center;
+        "
+      >
+        <div
+          style="
+            width: 100%;
+            height: 100%;
+            overflow: scroll;
+            padding: 6em 2em 4em 2em;
+            line-height: 1.75em;
+          "
+        >
+          <div style="max-width: 700px">
+            <h1>hey</h1>
+            <div style="padding: 10px"></div>
+            <p>i am peacin out on instagram</p>
+            <p>
+              ive been off instagram for months now but have yet to delete my
+              accounts
+            </p>
+            <p>
+              ive procrastinated on this for <strong>way</strong> too long, im
+              not too sure why (i think i actually do, but that isn't for this
+              post)
+            </p>
+            <p>
+              the feeling that i must depart from instagram in some sort of
+              <em>correct</em> manner - and to let ppl i know on instagram that
+              even if im not there, they could still reach out
+            </p>
+            <div style="padding: 10px"></div>
+            <p>...</p>
+            <div style="padding: 10px"></div>
+            <p>but yeah that's basically it</p>
+            <p>
+              if you have my number, you have my number. but if you dont have it
+              or any contact info, you could contact me at sammysamkough at
+              hotmail dot com
+            </p>
+            <p>
+              (im not spelling it out explicitly because spam (i think, idk, i
+              just follow what other ppl do))
+            </p>
+            <div style="padding: 10px"></div>
+            <p>
+              this is just so funny to me. i never would have thought leaving a
+              social media platform is that big of a deal. but look at me. like,
+              who am i lmao? but i guess deleting posts forever that meant a lot
+              means more than i had thought. or maybe im just lazy. who knows!
+            </p>
+            <p>
+              but yeah, ill be deleting all my instagram accounts on thursday,
+              march 24th 2022 (probs at midnight). hope y'all have a great one
+              <3
+            </p>
+            <div style="padding: 10px"></div>
+            <h3>sammy</h3>
+            <h4>tuesday, march 22 @ 2:34am</h4>
+          </div>
         </div>
-    </body>
+      </div>
+    </div>
+  </body>
 </html>
 
 <!--
