--- a/experience.html
+++ b/experience.html
@@ -110,6 +110,36 @@
                 performance of the main table interface by 50%.
               </span>
             </experience-block>
+            <experience-block
+              company="dot llc"
+              title="co-founder/software developer"
+              dates="march 2017 - august 2018"
+            >
+              <span slot="description">
+                founded a consulting company that helped businesses with all
+                things digital. this includes (but not limited to) website
+                development, digital marketing (i.e. SEO, social media ads),
+                mobile app development. projects included
+                <a
+                  href="https://www.stunitedapp.com/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >stunited</a
+                >,
+                <a
+                  href="http://www.circassianfoundation.org/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >circassian education foundation</a
+                >,
+                <a
+                  href="https://essential.group/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >essential creative group</a
+                >.
+              </span>
+            </experience-block>
           </div>
           <div style="padding: 30px"></div>
           <h3><a href="./projects.html">projects</a></h3>
