--- a/experience.html
+++ b/experience.html
@@ -112,7 +112,7 @@
             </experience-block>
             <experience-block
               company="dot llc"
-              title="co-founder/software developer"
+              title="co-founder/software engineer"
               dates="march 2017 - august 2018"
             >
               <span slot="description">
