--- a/experience.html
+++ b/experience.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sam | experience</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
     <div style="width: 100vw; height: 100vh">
@@ -17,6 +17,7 @@
       >
         <div class="text-container">
           <div
+            id="experience-container"
             style="
               width: 100%;
               display: flex;
@@ -146,6 +147,7 @@
         </div>
       </div>
     </div>
-    <script src="./experienceBlock.js"></script>
+    <script src="./scripts/experienceBlock.js"></script>
+    <!-- <script src="./scripts/experience.js"></script> -->
   </body>
 </html>
