--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sam</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
     <div style="width: 100vw; height: 100vh">
@@ -17,7 +17,7 @@
         "
       >
         <div style="max-width: 700px; padding: 6em 2em">
-          <img src="fam.jpg" alt="family" style="width: 100%" />
+          <img src="./assets/fam.jpg" alt="family" style="width: 100%" />
         </div>
       </div>
     </div>
