--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sam | experience</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
     <div style="width: 100vw; height: 100vh">
@@ -70,6 +70,6 @@
         </div>
       </div>
     </div>
-    <script src="./projectBlock.js"></script>
+    <script src="./scripts/projectBlock.js"></script>
   </body>
 </html>
