--- a/test.html
+++ b/test.html
@@ -3,10 +3,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sam | test</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
     <div id="test"></div>
-    <script src="./test.js"></script>
+    <script src="./scripts/test.js"></script>
   </body>
 </html>
