--- a/index.html
+++ b/index.html
@@ -16,8 +16,30 @@
           align-items: center;
         "
       >
-        <div style="max-width: 700px; padding: 6em 2em">
-          <img src="./assets/fam.jpg" alt="family" style="width: 100%" />
+        <div
+          style="
+            max-width: 700px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            padding: 6em 2em;
+          "
+        >
+          <div style="display: flex; justify-content: space-evenly; gap: 10px">
+            <a href="./index.html">index</a>
+            <a href="./about.html">about</a>
+            <a href="./photos.html">photos</a>
+          </div>
+          <img
+            id="main-img"
+            src="./assets/fam.jpg"
+            alt="picture of my brothers and sister with our late grandmother from my father's side, tete jean"
+            style="width: 100%"
+          />
+          <div style="display: flex; justify-content: space-evenly; gap: 10px">
+            <a href="./experience.html">experience</a>
+            <a href="./projects.html">projects</a>
+          </div>
         </div>
       </div>
     </div>
