--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
-    <div style="width: 100vw; height: 100vh">
+    <div class="one-hundred-vwh">
       <div
         style="
           width: 100%;
