--- a/about.html
+++ b/about.html
@@ -2,19 +2,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sam | peace</title>
+    <title>sam | about</title>
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
-    <div style="width: 100vw; height: 100vh">
-      <div
-        style="
-          width: 100%;
-          height: 100%;
-          display: flex;
-          justify-content: center;
-        "
-      >
+    <div class="one-hundred-vwh">
+      <div class="center-screen">
         <div
           style="
             width: 100%;
