--- a/experience.html
+++ b/experience.html
@@ -6,25 +6,10 @@
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
-    <div style="width: 100vw; height: 100vh">
-      <div
-        style="
-          width: 100%;
-          height: 100%;
-          display: flex;
-          justify-content: center;
-        "
-      >
+    <div class="one-hundred-vwh">
+      <div class="center-screen">
         <div class="text-container">
-          <div
-            id="experience-container"
-            style="
-              width: 100%;
-              display: flex;
-              flex-direction: column;
-              gap: 20px;
-            "
-          >
+          <div class="column-gap-20">
             <h1>experience</h1>
             <experience-block
               company="canal"
@@ -148,6 +133,5 @@
       </div>
     </div>
     <script src="./scripts/experienceBlock.js"></script>
-    <!-- <script src="./scripts/experience.js"></script> -->
   </body>
 </html>
