--- a/peace.html
+++ b/peace.html
@@ -6,15 +6,8 @@
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
-    <div style="width: 100vw; height: 100vh">
-      <div
-        style="
-          width: 100%;
-          height: 100%;
-          display: flex;
-          justify-content: center;
-        "
-      >
+    <div class="one-hundred-vwh">
+      <div class="center-screen">
         <div
           style="
             width: 100%;
