--- a/photos.html
+++ b/photos.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sam</title>
+    <title>sam | photos</title>
     <link rel="stylesheet" href="./styles/styles.css" />
     <style>
       .photo-container {
@@ -28,16 +28,8 @@
     </style>
   </head>
   <body>
-    <div style="width: 100vw; height: 100vh">
-      <div
-        style="
-          width: 100%;
-          height: 100%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-        "
-      >
+    <div class="one-hundred-vwh">
+      <div class="center-screen" style="align-items: center">
         <div
           id="photos-container"
           style="
