--- a/projects.html
+++ b/projects.html
@@ -2,28 +2,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sam | experience</title>
+    <title>sam | projects</title>
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
-    <div style="width: 100vw; height: 100vh">
-      <div
-        style="
-          width: 100%;
-          height: 100%;
-          display: flex;
-          justify-content: center;
-        "
-      >
+    <div class="one-hundred-vwh">
+      <div class="center-screen">
         <div class="text-container">
-          <div
-            style="
-              width: 100%;
-              display: flex;
-              flex-direction: column;
-              gap: 20px;
-            "
-          >
+          <div class="column-gap-20">
             <h1>projects</h1>
             <project-block
               title="hangul house"
