--- a/about.html
+++ b/about.html
@@ -36,6 +36,7 @@
             </p>
             <div style="padding: 10px"></div>
             <strong>much love <3</strong>
+            <div style="padding: 2px"></div>
             <em>last update on saturday june 18 @ 6amish</em>
           </div>
         </div>
