--- a/about.html
+++ b/about.html
@@ -3,10 +3,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sam | about</title>
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
   </head>
   <body>
-    <div class="one-hundred-vwh">
+    <div class="main-container">
       <div class="center-screen">
         <div
           style="
