--- a/experience.html
+++ b/experience.html
@@ -3,10 +3,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sam | experience</title>
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
   </head>
   <body>
-    <div class="one-hundred-vwh">
+    <div class="main-container">
+      <sammy-header></sammy-header>
       <div class="center-screen">
         <div class="text-container">
           <div class="column-gap-20">
@@ -43,8 +45,8 @@
                   href="https://apps.apple.com/us/app/nevermet-vr-metaverse-dating/id1601331019"
                   target="_blank"
                   rel="noopener noreferrer"
-                  >live on the app store
-                </a>
+                  >live on the app store</a
+                >
                 with 111 reviews and a 4.5+ rating.
               </span>
             </experience-block>
@@ -132,6 +134,7 @@
         </div>
       </div>
     </div>
-    <script src="./scripts/experienceBlock.js"></script>
+    <script src="./@components/experienceBlock.js"></script>
+    <script src="./@components/header.js"></script>
   </body>
 </html>
