--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sam</title>
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
   </head>
   <body>
-    <div class="one-hundred-vwh">
+    <div class="main-container">
       <div
         style="
           width: 100%;
@@ -22,16 +23,16 @@
             display: flex;
             flex-direction: column;
             gap: 10px;
-            padding: 6em 2em;
+            padding: 6em 2em 10em;
           "
         >
           <div style="display: flex; justify-content: space-evenly; gap: 10px">
             <a href="./about.html">about</a>
-            <a href="./photos.html">photos</a>
+            <a href="./photos/index.html">photos</a>
           </div>
           <img
             id="main-img"
-            src="./assets/fam.jpg"
+            src="./photos/assets/fam.jpg"
             alt="picture of my brothers and sister with our late grandmother from my father's side, tete jean"
             style="width: 100%"
           />
