--- a/projects.html
+++ b/projects.html
@@ -3,10 +3,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sam | projects</title>
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" type="image/x-icon" href="./favicon.ico" />
   </head>
   <body>
-    <div class="one-hundred-vwh">
+    <div class="main-container">
       <div class="center-screen">
         <div class="text-container">
           <div class="column-gap-20">
@@ -56,6 +57,6 @@
         </div>
       </div>
     </div>
-    <script src="./scripts/projectBlock.js"></script>
+    <script src="./@components/projectBlock.js"></script>
   </body>
 </html>
