--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       <main>
         <img
           src="./assets/photos/me-and-mama.png"
-          alt="my mother and i probably when i was around 3 years old sitting on her lap with sunglasses on my face but are much larger than my face"
+          alt="my mother and i (probably) when i was around 3 years old sitting on her lap with sunglasses on my face but are much larger than my face"
           width="400px"
           height="300px"
           decoding="async"
