updated but not working footer

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles/_reset.css" />
     <link rel="stylesheet" href="./styles/_globals.css" />
     <link rel="stylesheet" href="./styles/index.css" />
+    <script src="./components/footer.js" type="text/javascript" defer></script>
   </head>
 
   <body>
@@ -26,21 +27,11 @@
           src="./assets/photos/me-and-mama.png"
           alt="my mother and i (probably) when i was around 3 years old sitting on her lap with sunglasses on my face but are much larger than my face"
           width="400px"
-          height="300px"
+          height="auto"
           decoding="async"
         />
       </main>
-      <footer>
-        <ul>
-          <li><a href="./about.html">about</a></li>
-          <li><a href="./projects.html">projects</a></li>
-          <li><a href="./works.html">works</a></li>
-          <li><a href="./volunteering.html">volunteering</a></li>
-          <li><a href="./photos.html">photos</a></li>
-          <li><a href="./writings.html">writings</a></li>
-          <li><a href="./contact.html">contact</a></li>
-        </ul>
-      </footer>
+      <page-footer></page-footer>
     </div>
   </body>
 </html>
