footer is working, header incoming

--- a/src/projects.html
+++ b/src/projects.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./styles/_reset.css" />
     <link rel="stylesheet" href="./styles/_globals.css" />
     <link rel="stylesheet" href="./styles/projects.css" />
+    <script src="./components/footer.js" type="text/javascript" defer></script>
   </head>
 
   <body>
@@ -18,17 +19,7 @@
       <main>
         <p>to be done</p>
       </main>
-      <footer>
-        <ul>
-          <li><a href="./about.html">about</a></li>
-          <li><a href="./projects.html">projects</a></li>
-          <li><a href="./works.html">works</a></li>
-          <li><a href="./volunteering.html">volunteering</a></li>
-          <li><a href="./photos.html">photos</a></li>
-          <li><a href="./writings.html">writings</a></li>
-          <li><a href="./contact.html">contact</a></li>
-        </ul>
-      </footer>
+      <page-footer></page-footer>
     </div>
   </body>
 </html>
