--- a/src/directory.html
+++ b/src/directory.html
@@ -2,19 +2,19 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sammy | follows</title>
+    <title>sammy | directory</title>
     <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
     <link rel="stylesheet" href="./styles/_variables.css" />
     <link rel="stylesheet" href="./styles/_reset.css" />
     <link rel="stylesheet" href="./styles/_globals.css" />
-    <link rel="stylesheet" href="./styles/follows.css" />
+    <link rel="stylesheet" href="./styles/directory.css" />
     <script src="./components/footer.js" type="text/javascript" defer></script>
   </head>
 
   <body>
     <div id="root">
       <header>
-        <h1><a href="./">sammy samkough</a> | follows</h1>
+        <h1><a href="./">sammy samkough</a> | directory</h1>
       </header>
       <main>
         <p>to be done</p>
