adds rest of pages

--- a/src/about.html
+++ b/src/about.html
@@ -3,21 +3,20 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sammy | about</title>
-    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./assets/favicons/favicon.ico" />
     <link rel="stylesheet" href="./styles/_variables.css" />
     <link rel="stylesheet" href="./styles/_reset.css" />
     <link rel="stylesheet" href="./styles/_globals.css" />
     <link rel="stylesheet" href="./styles/about.css" />
+    <script src="./components/header.js" type="text/javascript" defer></script>
     <script src="./components/footer.js" type="text/javascript" defer></script>
   </head>
 
   <body>
     <div id="root">
-      <header>
-        <h1><a href="./">sammy samkough</a> | about</h1>
-      </header>
+      <page-header page-name="about"></page-header>
       <main>
-        <p>to be done</p>
+        <p>hey hey, im sammy. nice to meet you :D</p>
       </main>
       <page-footer></page-footer>
     </div>
