--- a/src/contact.html
+++ b/src/contact.html
@@ -3,19 +3,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sammy | contact</title>
-    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./assets/favicons/favicon.ico" />
     <link rel="stylesheet" href="./styles/_variables.css" />
     <link rel="stylesheet" href="./styles/_reset.css" />
     <link rel="stylesheet" href="./styles/_globals.css" />
     <link rel="stylesheet" href="./styles/contact.css" />
+    <script src="./components/header.js" type="text/javascript" defer></script>
     <script src="./components/footer.js" type="text/javascript" defer></script>
   </head>
 
   <body>
     <div id="root">
-      <header>
-        <h1><a href="./">sammy samkough</a> | contact</h1>
-      </header>
+      <page-header page-name="contact"></page-header>
       <main>
         <p>shoot me an <a href="mailto:sammysamkough@hotmail.com">email</a></p>
       </main>
