--- a/src/index.html
+++ b/src/index.html
@@ -3,25 +3,23 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sammy</title>
-    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./assets/favicons/favicon.ico" />
     <link rel="stylesheet" href="./styles/_variables.css" />
     <link rel="stylesheet" href="./styles/_reset.css" />
     <link rel="stylesheet" href="./styles/_globals.css" />
     <link rel="stylesheet" href="./styles/index.css" />
+    <script src="./components/header.js" type="text/javascript" defer></script>
     <script src="./components/footer.js" type="text/javascript" defer></script>
   </head>
 
   <body>
     <div id="root">
-      <header>
-        <h1><a href="./">sammy samkough</a></h1>
+      <page-header>
         <p>
-          <em
-            >circassian syrian born in america who loves the internet, software,
-            &amp; pizza</em
-          >
+          <em>circassian syrian born in america who loves the internet, software,
+            &amp; pizza</em>
         </p>
-      </header>
+      </page-header>
       <main>
         <img
           src="./assets/photos/me-and-mama.png"
