--- a/src/thoughts.html
+++ b/src/thoughts.html
@@ -2,19 +2,19 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sammy | links</title>
+    <title>sammy | thoughts</title>
     <link rel="icon" type="image/x-icon" href="./assets/favicons/favicon.ico" />
     <link rel="stylesheet" href="./styles/_variables.css" />
     <link rel="stylesheet" href="./styles/_reset.css" />
     <link rel="stylesheet" href="./styles/_globals.css" />
-    <link rel="stylesheet" href="./styles/links.css" />
+    <link rel="stylesheet" href="./styles/thoughts.css" />
     <script src="./components/header.js" type="text/javascript" defer></script>
     <script src="./components/footer.js" type="text/javascript" defer></script>
   </head>
 
   <body>
     <div id="root">
-      <page-header page-name="links"></page-header>
+      <page-header page-name="thoughts"></page-header>
       <main>
         <p>to be done</p>
       </main>
