--- a/src/works.html
+++ b/src/works.html
@@ -3,19 +3,18 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sammy | works</title>
-    <link rel="icon" type="image/x-icon" href="./assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="./assets/favicons/favicon.ico" />
     <link rel="stylesheet" href="./styles/_variables.css" />
     <link rel="stylesheet" href="./styles/_reset.css" />
     <link rel="stylesheet" href="./styles/_globals.css" />
     <link rel="stylesheet" href="./styles/works.css" />
+    <script src="./components/header.js" type="text/javascript" defer></script>
     <script src="./components/footer.js" type="text/javascript" defer></script>
   </head>
 
   <body>
     <div id="root">
-      <header>
-        <h1><a href="./">sammy samkough</a> | works</h1>
-      </header>
+      <page-header page-name="works"></page-header>
       <main>
         <p>to be done</p>
       </main>
