--- a/src/about.html
+++ b/src/about.html
@@ -17,6 +17,8 @@
       <page-header page-name="about"></page-header>
       <main>
         <p>hey hey, im sammy. nice to meet you :D</p>
+        <p>this website is currently a work in progress 🙏💕</p>
+        <time>2022-11-26 @ 5:07am</time>
       </main>
       <page-footer></page-footer>
     </div>
