reorganized and also added some photos

--- a/src/about/index.html
+++ b/src/about/index.html
@@ -3,13 +3,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sammy | about</title>
-    <link rel="icon" type="image/x-icon" href="./assets/favicons/favicon.ico" />
-    <link rel="stylesheet" href="./styles/_variables.css" />
-    <link rel="stylesheet" href="./styles/_reset.css" />
-    <link rel="stylesheet" href="./styles/_globals.css" />
-    <link rel="stylesheet" href="./styles/about.css" />
-    <script src="./components/header.js" type="text/javascript" defer></script>
-    <script src="./components/footer.js" type="text/javascript" defer></script>
+    <link rel="icon" type="image/x-icon" href="../_assets/favicons/favicon.ico" />
+    <link rel="stylesheet" href="../_styles/variables.css" />
+    <link rel="stylesheet" href="../_styles/reset.css" />
+    <link rel="stylesheet" href="../_styles/globals.css" />
+    <link rel="stylesheet" href="./styles.css" />
+    <script src="../_components/header.js" type="text/javascript" defer></script>
+    <script src="../_components/footer.js" type="text/javascript" defer></script>
   </head>
 
   <body>
