--- a/src/videos/hannan-bday-2022/index.html
+++ b/src/videos/hannan-bday-2022/index.html
@@ -5,12 +5,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sammy | videos</title>
-    <link rel="icon" type="image/x-icon" href="../../assets/favicons/favicon.ico" />
-    <link rel="stylesheet" href="../../styles/_variables.css" />
-    <link rel="stylesheet" href="../../styles/_reset.css" />
-    <link rel="stylesheet" href="../../styles/_globals.css" />
-    <link rel="stylesheet" href="../../styles/videos.css" />
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="icon" type="image/x-icon" href="../../_assets/favicons/favicon.ico" />
+    <link rel="stylesheet" href="../../_styles/_variables.css" />
+    <link rel="stylesheet" href="../../_styles/_reset.css" />
+    <link rel="stylesheet" href="../../_styles/_globals.css" />
+    <link rel="stylesheet" href="../../_styles/videos.css" />
+    <link rel="stylesheet" href="./styles.css" />
 </head>
 
 <body>
