--- a/src/index/index.html
+++ b/src/index/index.html
@@ -3,13 +3,13 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sammy</title>
-    <link rel="icon" type="image/x-icon" href="./assets/favicons/favicon.ico" />
-    <link rel="stylesheet" href="./styles/_variables.css" />
-    <link rel="stylesheet" href="./styles/_reset.css" />
-    <link rel="stylesheet" href="./styles/_globals.css" />
-    <link rel="stylesheet" href="./styles/index.css" />
-    <script src="./components/header.js" type="text/javascript" defer></script>
-    <script src="./components/footer.js" type="text/javascript" defer></script>
+    <link rel="icon" type="image/x-icon" href="./_assets/favicons/favicon.ico" />
+    <link rel="stylesheet" href="../_styles/variables.css" />
+    <link rel="stylesheet" href="../_styles/reset.css" />
+    <link rel="stylesheet" href="../_styles/globals.css" />
+    <link rel="stylesheet" href="../styles.css" />
+    <script src="../_components/header.js" type="text/javascript" defer></script>
+    <script src="../_components/footer.js" type="text/javascript" defer></script>
   </head>
 
   <body>
@@ -22,7 +22,7 @@
       </page-header>
       <main>
         <img
-          src="./assets/photos/me-and-mama.png"
+          src="./assets/me-and-mama.png"
           alt="my mother and i (probably) when i was around 3 years old sitting on her lap with sunglasses on my face but are much larger than my face"
           width="400px"
           height="auto"
