--- a/src/about/index.html
+++ b/src/about/index.html
@@ -3,22 +3,61 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sammy | about</title>
-    <link rel="icon" type="image/x-icon" href="../_assets/favicons/favicon.ico" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="../_assets/favicons/favicon.ico"
+    />
     <link rel="stylesheet" href="../_styles/variables.css" />
     <link rel="stylesheet" href="../_styles/reset.css" />
     <link rel="stylesheet" href="../_styles/globals.css" />
     <link rel="stylesheet" href="./styles.css" />
-    <script src="../_components/header.js" type="text/javascript" defer></script>
-    <script src="../_components/footer.js" type="text/javascript" defer></script>
+    <script
+      src="../_components/header.js"
+      type="text/javascript"
+      defer
+    ></script>
+    <script
+      src="../_components/footer.js"
+      type="text/javascript"
+      defer
+    ></script>
   </head>
 
   <body>
     <div id="root">
       <page-header page-name="about"></page-header>
       <main>
-        <p>hey hey, im sammy. nice to meet you :D</p>
-        <p>this website is currently a work in progress 🙏💕</p>
-        <time>2022-11-26 @ 5:07am</time>
+        <p>hi, my name's sammy. nice to meet you ❤️</p>
+        <p>
+          im currently a software engineer that works at canal with a focus on
+          the frontend. and let me tell you, i
+          <em style="color: #fb3636"><strong>love</strong></em>
+          the frontend.
+        </p>
+        <p>
+          but i also love a lot more things like: my family, video games,
+          clothing, movies, one piece, and so much more!
+        </p>
+        <p>
+          i am a huge believer in a lot of things too. one of those things
+          happens to be that we should all be given the power to showcase who we
+          truly are on the web! and i believe the personal website is a perfect
+          medium for that.
+        </p>
+        <p>
+          im currently in the middle of trying some new experiments out. one of
+          them is figuring out ways to make the website > instagram for the
+          average daily internet user as their "web homepage". but that's hard
+          because of the way things have become. and also because of my limited
+          use of time lol.
+        </p>
+        <p>
+          and so, welcome to my forever-changing website. i implore you to
+          explore.
+        </p>
+        <p>enjoy :)</p>
+        <time>2022-11-30 @ 4:09am EST</time>
       </main>
       <page-footer></page-footer>
     </div>
