--- a/src/thoughts/index.html
+++ b/src/thoughts/index.html
@@ -3,20 +3,34 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>sammy | thoughts</title>
-    <link rel="icon" type="image/x-icon" href="../_assets/favicons/favicon.ico" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="../_assets/favicons/favicon.ico"
+    />
     <link rel="stylesheet" href="../_styles/variables.css" />
     <link rel="stylesheet" href="../_styles/reset.css" />
     <link rel="stylesheet" href="../_styles/globals.css" />
     <link rel="stylesheet" href="./styles.css" />
-    <script src="../_components/header.js" type="text/javascript" defer></script>
-    <script src="../_components/footer.js" type="text/javascript" defer></script>
+    <script
+      src="../_components/header.js"
+      type="text/javascript"
+      defer
+    ></script>
+    <script
+      src="../_components/footer.js"
+      type="text/javascript"
+      defer
+    ></script>
   </head>
 
   <body>
     <div id="root">
       <page-header page-name="thoughts"></page-header>
       <main>
-        <p>to be done</p>
+        <ul>
+          <li><a href="items/first-thought.html">first thought</a></li>
+        </ul>
       </main>
       <page-footer></page-footer>
     </div>
