--- a/src/letters/mg-2023-07-15.html
+++ b/src/letters/mg-2023-07-15.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sammy | about</title>
+    <title>mg-2023-07-15</title>
     <link
       rel="icon"
       type="image/x-icon"
@@ -26,13 +26,7 @@
 
   <body>
     <div id="root">
-      <page-header page-name="about"></page-header>
-      <main>
-        <p>hi, my name's sammy. nice to meet you ❤️</p>
-        <p>this site is currently going a major update</p>
-        <time>2023-09-23 @ 1:03</time>
-      </main>
-      <page-footer></page-footer>
+      <main>test</main>
     </div>
   </body>
 </html>
