--- a/src/about/index.html
+++ b/src/about/index.html
@@ -29,8 +29,9 @@
       <page-header page-name="about"></page-header>
       <main>
         <p>hi, my name's sammy. nice to meet you ❤️</p>
-        <p>this site is currently going a major update</p>
-        <time>2023-09-23 @ 1:03</time>
+        <p>this site is currently going through a major update</p>
+        <p>probably will take until the end of this month, lol</p>
+        <time>2023-09-24 @ 1:33</time>
       </main>
       <page-footer></page-footer>
     </div>
